versioned_docs/version-0.5.0/function-mesh-worker/reference/customizable-option.md
---
title: Customizable options
category: function-mesh-worker
id: customizable-option
---

To facilitate submitting Pulsar functions based on your requirements, Function Mesh Worker service provides some customizable options.

| Name                  | Type    | Default | TrustedOnly | Description                                                                                                                                                                                                                                                                                                                                                                     |
|-----------------------|---------|---------|-------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `clusterName`         | String  | N/A     | No          | The Pulsar cluster of a Pulsar function, source, or sink.                                                                                                                                                                                                                                                                                                                       |
| `inputTypeClassName`  | String  | `[B`    | No          | The map of input topics to Java class names.                                                                                                                                                                                                                                                                                                                                    |
| `outputTypeClassName` | String  | `[B`    | No          | The map of output topics to Java class names.                                                                                                                                                                                                                                                                                                                                   |
| `maxReplicas`         | Integer | `0`     | No          | The maximum number of Pulsar instances that you want to run for this Pulsar Function. When the value of the `maxReplicas` parameter is greater than the value of `replicas`, it indicates that the Functions controller automatically scales the Pulsar Functions based on the CPU usage. By default, `maxReplicas` is set to 0, which indicates that auto-scaling is disabled. |
| `env` | Map < String, String > | N/A | No | The environment variables being attached to a Pod that is created by the Function Mesh Operator for the cluster. |
| `managed` | Boolean | `true` | Yes | Configure whether a Function, source, or sink can be managed or unmanaged. |
| `serviceAccountName`  | String  | N/A     | Yes         | The name of the service account which is used to run Pulsar Functions or connectors in the Function Mesh Worker service.                                                                                                                                                                                                                                                        |
| `runnerImage`         | String  | N/A     | Yes         | The runner image to run the Pulsar Function instances.                                                                                                                                                                                                                                                                                                                          |
