versioned_docs/version-0.10.0/function-mesh-worker/reference/customizable-option.md
---
title: Customizable options
category: function-mesh-worker
id: customizable-option
---

To facilitate submitting Pulsar functions based on your requirements, Function Mesh Worker service provides some customizable options.

| Name                  | Type    | Default | TrustedOnly | Description                                                                                                                                                                                                                                                                                                                                                                     |
|-----------------------|---------|---------|-------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `clusterName`         | String  | N/A     | No          | The Pulsar cluster of a Pulsar function, source, or sink.                                                                                                                                                                                                                                                                                                                       |
| `inputTypeClassName`  | String  | `[B`    | No          | The map of input topics to Java class names.                                                                                                                                                                                                                                                                                                                                    |
| `outputTypeClassName` | String  | `[B`    | No          | The map of output topics to Java class names.                                                                                                                                                                                                                                                                                                                                   |
| `maxReplicas`         | Integer | `0`     | No          | The maximum number of Pulsar instances that you want to run for this Pulsar Function. When the value of the `maxReplicas` parameter is greater than the value of `replicas`, it indicates that the Functions controller automatically scales the Pulsar Functions based on the CPU usage. By default, `maxReplicas` is set to 0, which indicates that auto-scaling is disabled. |
| `env` | Map < String, String > | N/A | No | The environment variables being attached to a Pod that is created by the Function Mesh Operator for the cluster. |
| `managed` | Boolean | `true` | Yes | Configure whether a Function, source, or sink can be managed or unmanaged. |
| `vpaSepc` | vPASpec | N/A | No |  The Kubernetes VerticalPodAutoscaler settings. For details, see [Kubernetes documentation](https://github.com/kubernetes/autoscaler/tree/master/vertical-pod-autoscaler). |
| `serviceAccountName`  | String  | N/A     | Yes         | The name of the service account that is used to run Pulsar Functions or connectors in the Function Mesh Worker service.                                                                                                                                                                                                                                                        |
| `runnerImage`         | String  | N/A     | Yes         | The runner image to run the Pulsar Function instances.                                                                                                                                                                                                                                                                                                                          |
| `logLevel` | String  | N/A | No | The log levels for Pulsar functions. For details, see [log levels](/functions/function-crd.md/#log-levels).|
| `logRotationPolicy` | String  | N/A | No | The log rotation policies for Pulsar functions. You can set the log rotation policies based on the time or the log file size. For details, see [log rotation policies](/functions/function-crd.md/#log-rotation-policies). |
| `runnerImageTag` | String  | N/A | No | The tag of the [runner image](/functions/function-crd.md#runner-images) that is used to submit a function, source, or sink. |
| `hpaSpec` | HPASpec | N/A | No | The Kubernetes HorizontalPodAutoscaler settings. For details, see [Kubernetes documentation](https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/). |